v17_ResourceQuota/NetworkPolices .yml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: test-network-policy
#   namespace: test-ns
# spec:
#   podSelector:
#     matchLabels:
#       role: mongo       # Name of the pod 
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:  # Ingress Traffic: Traffic coming into the pod.
#   - from:
#     # - namespaceSelector:
#     #     matchLabels:
#     #        team: testingteam
#     - podSelector:
#         matchLabels:
#           role: springapp
#     ports:
#     - protocol: TCP
#       port: 27017
#   egress:   # Egress Traffic: Traffic going out of the pod.
#   - to:
#     - ipBlock:
#         cidr: 10.0.0.0/24
#     ports:
#     - protocol: TCP
#       port: 5978 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector:
    matchLabels:
      role: mongo       # Name of the pod 
  policyTypes:
  - Ingress
  ingress:  # Ingress Traffic: Traffic coming into the pod.
  - from:
    # - namespaceSelector:
    #     matchLabels:
    #        team: testingteam
    - podSelector:
        matchLabels:
          app: springapp
    ports:
    - protocol: TCP
      port: 27017
