v17_ResourceQuota/default-deny.yml
# You can create a "default" ingress isolation policy for a namespace by creating a NetworkPolicy that 
# selects all pods but does not allow any ingress traffic to those pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
